--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="../../../style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/rnv1unu.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Feat Page Template</title>
