--- a/players/feats/allfeats/template.html
+++ b/players/feats/allfeats/template.html
@@ -18,6 +18,9 @@
         </a>
       </div>
     </div>
+  <div class="link">
+    <a href="../../../index.html">Home</a> < <a href="../../players.html">Players</a> < <a href="../index.html">Feats</a>
+  </div>
   <div id="content">
     <div class="title">
       <h1>Feat name</h1>
