--- a/players/feats/database.html
+++ b/players/feats/database.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="home.css">
-  <link rel="stylesheet" href="https://use.typekit.net/rnv1unu.css">
+  <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="https://use.typekit.net/rnv1unu.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Home</title>
+  <title>Feat Database</title>
   <meta name="viewport"
   content="width=device-width,
   initial-scale=1">
@@ -19,13 +18,17 @@
         </a>
       </div>
     </div>
+  <div class="link">
+    <a href="../../index.html">Home</a> > <a href="../players.html">Players</a> > <a href="index.html">Feats</a> > <a href="database.html">Feat Database</a>
   </div>
-  <div id="content"align="center">
+  <div id="content">
     <div class="title">
-      <img src="fragments1.png" alt="Fragments of Power" style="width:55%;">
-      <h1>Tabletop Rolepaying Game</h1>
+      <h1>Feat Database</h1>
+    </div>
+    <div class="description">
+      <ol>
+        <a href="database.html">//Feat Database goes here//</a><br>
+      </ol>
     </div>
   </div>
-  <div class="link" align="center">
-  <a href="players/players.html">Players</a> / <a href="gamemasters/gamemasters.html">Gamemasters</a> / <a href="rules/rules.html">Rules</a>
 </body>
