--- a/index.html
+++ b/index.html
@@ -12,20 +12,14 @@
 </head>
 <body>
   <div id="banner">
-    <div class="topnav">
-      <input type="text" placeholder="Search..">
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-      </div>
-    </div>
+    <img src="fragmentsseal.png" alt="logo seal" style="width:8%; padding-top:10px;">
+      <input type="text" placeholder="Search.."style="position: absolute; left: 80%; top: 4%">
   </div>
   <div id="content"align="center">
     <div class="title">
-      <img src="fragments1.png" alt="Fragments of Power" style="width:55%;">
-      <h1>Tabletop Rolepaying Game</h1>
+      <img src="fragments2.png" alt="Fragments of Power" style="width:55%">
     </div>
   </div>
   <div class="link" align="center">
-  <a href="players/players.html">Players</a> / <a href="gamemasters/gamemasters.html">Gamemasters</a> / <a href="rules/rules.html">Rules</a>
+  <a href="players/players.html">players</a> / <a href="gamemasters/gamemasters.html">gamemasters</a> / <a href="rules/rules.html">rules</a>
 </body>
