--- a/players/feats/index.html
+++ b/players/feats/index.html
@@ -4,30 +4,26 @@
   <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="https://use.typekit.net/rnv1unu.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Feats</title>
+  <title>Feat Database</title>
   <meta name="viewport"
   content="width=device-width,
   initial-scale=1">
 </head>
 <body>
   <div id="banner">
-    <div class="topnav">
-      <input type="text" placeholder="Search..">
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-      </div>
-    </div>
+    <img src="../../fragmentsseal.png" alt="logo seal" style="width:8%; padding-top:10px;">
+      <input type="text" placeholder="Search.."style="position: absolute; left: 80%; top: 4%">
+  </div>
   <div class="link">
     <a href="../../index.html">Home</a> > <a href="../players.html">Players</a> > <a href="index.html">Feats</a>
   </div>
   <div id="content">
     <div class="title">
-      <h1>Feats</h1>
+      <h1>Feat Database</h1>
     </div>
     <div class="description">
       <ol>
-        <a href="database.html">Search Feat Database</a><br>
+        <a href="database.html">//Feat Database goes here//</a><br>
       </ol>
     </div>
   </div>
