--- a/rules/rules.html
+++ b/rules/rules.html
@@ -11,13 +11,9 @@
 </head>
 <body>
   <div id="banner">
-    <div class="topnav">
-      <input type="text" placeholder="Search..">
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-      </div>
-    </div>
+    <img src="../fragmentsseal.png" alt="logo seal" style="width:8%; padding-top:10px;">
+      <input type="text" placeholder="Search.."style="position: absolute; left: 80%; top: 4%">
+  </div>
   <div class="link">
     <a href="../index.html">Home</a> > <a href="rules.html">Rules</a>
   </div>
