--- a/players/feats/index.html
+++ b/players/feats/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
   <div id="banner">
-    <img src="../../fragmentsseal.png" alt="logo seal" style="width:8%; padding-top:10px;">
+    <a href="../index.html">
+      <img src="../../fragmentsseal.png" alt="logo seal" style="width:8%; padding-top:10px;">
+    </a>
       <input type="text" placeholder="Search.."style="position: absolute; left: 80%; top: 4%">
   </div>
   <div class="link">
